--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="integration"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/not-yet-commons-ssl-0.3.9.jar"/>
+	<classpathentry kind="lib" path="lib/build/ca.juliusdavies-not-yet-commons-ssl.jar"/>
 	<classpathentry kind="lib" path="lib/build/commons-codec-commons-codec.jar"/>
 	<classpathentry kind="lib" path="lib/build/commons-collections-commons-collections.jar"/>
 	<classpathentry kind="lib" path="lib/build/commons-httpclient-commons-httpclient.jar"/>
@@ -36,15 +36,15 @@
 	<classpathentry kind="lib" path="lib/build/xalan-xalan.jar"/>
 	<classpathentry kind="lib" path="lib/build/xerces-xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/build/xml-resolver-xml-resolver.jar"/>
-	<classpathentry kind="lib" path="lib/openws-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.opensaml-openws.jar"/>
 	<classpathentry kind="lib" path="lib/test/org.mortbay.jetty-jsp-2.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/org.mortbay.jetty-jsp-api-2.1.jar"/>
 	<classpathentry kind="lib" path="lib/build/org.apache.santuario-xmlsec.jar"/>
-	<classpathentry kind="lib" path="lib/opensaml-2.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.opensaml-opensaml.jar"/>
 	<classpathentry kind="lib" path="lib/build/xalan-serializer.jar"/>
 	<classpathentry kind="lib" path="lib/build/org.apache.velocity-velocity.jar"/>
 	<classpathentry kind="lib" path="lib/build/org.bouncycastle-bcprov-jdk15.jar"/>
-	<classpathentry kind="lib" path="lib/xmltooling-1.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/esapi-2.0GA.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.opensaml-xmltooling.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.owasp.esapi-esapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
